# flex-layout

./: .gitignore  BUILD.bazel  WORKSPACE  angular.tsconfig.json  build-config.js  package-lock.json  package.json  packages.bzl
.circleci/: config.yml
src/apps/demo-app/: package.json
src/lib/: BUILD.bazel  package.json  rollup_globals.bzl
src/lib/core/: BUILD.bazel
src/lib/extended/: BUILD.bazel
src/lib/flex/: BUILD.bazel
src/lib/flex/flex/: flex.spec.ts
src/lib/flex/layout-align/: layout-align.spec.ts
test/: BUILD.bazel
