package(default_visibility=["//visibility:public"])
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_config")
load("@angular//:index.bzl", "ng_package")
load("//:packages.bzl", "LAYOUT_PACKAGES")
load("//src/lib:rollup_globals.bzl", "LAYOUT_ROLLUP_GLOBALS")


# Export the Layout tsconfig so that subpackages can reference it directly.
exports_files(["tsconfig-build.json"])

# Root "@angular/flex-layout" entry-point that does not re-export individual entry-points.
ts_library(
  name = "flex-layout",
  srcs = glob(["*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@angular/flex-layout",
  deps = [
    "//src/lib/core",
    "//src/lib/extended",
    "//src/lib/flex",
    "//src/lib/server",
  ],
  tsconfig = ":tsconfig-build.json",
)

# Creates the @angular/flex-layout package published to npm.
ng_package(
  name = "npm_package",
  srcs = ["package.json"],
  entry_point = "src/lib/public_api.js",
  globals = LAYOUT_ROLLUP_GLOBALS,
  deps = [":flex-layout"] + ["//src/lib/%s" % p for p in LAYOUT_PACKAGES]
)
